Поправил ответ по current useru
