# controllers/users/userGetCurrent.js
@@ -2,13 +2,13 @@ const { getCurrent } = require('../../services/users');
 
 const userGetCurrent = async (req, res) => {
   const { id } = req.user;
-  const { name, email, balance } = await getCurrent(id);
+  const { name, email } = await getCurrent(id);
 
   res.status(200).json({
     status: 'Ok',
     code: 200,
     data: {
-      user: { name, email, balance },
+      user: { name, email },
     },
   });
 };
