# swagger.json
@@ -674,11 +674,6 @@
                     "type": "string",
                     "description": "User's email",
                     "format": "email"
-                  },
-                  "balance": {
-                    "type": "number",
-                    "description": "User's balance",
-                    "example": "25800"
                   }
                 }
               }
